--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,20 +12,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="onClick"
-        android:text="开始录音" />
+        android:text="手动录音" />
 
     <Button
         android:id="@+id/btn_stop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="onClick"
-        android:text="停止录音" />
+        android:text="关闭录音" />
 
     <Button
         android:id="@+id/btn_phone"
         android:layout_width="match_parent"
-        android:onClick="onClick"
         android:layout_height="wrap_content"
-        android:text="拨打电话" />
+        android:onClick="onClick"
+        android:text="拨号录音" />
 
 </LinearLayout>
